fix: исправить замечания